# opengl-tutorial

./: CMakeLists.txt  README.md
diffs/: 1_add_color.diff  2_add_time_uniform.diff
src/: main.cpp
